# tfg_OpenSR

./: .gitignore  README.md  pyproject.toml
configs/: barcelona.current.yaml
configs/examples/: sen2sr_full.example.yaml  sen2sr_rgbn.example.yaml
rawData/: barcelona_terminal_s2.tif  barcelona_terminal_s2.tif.aux.xml
requirements/: base.txt  opensr-model.txt
scripts/: inspect_input.ps1  run_inference.ps1  setup_env.ps1
src/opensr_local_runner.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/opensr_pipeline/: __init__.py  band_sets.py  config.py  geoio.py  inspect_input.py  model_loaders.py  run_inference.py  tiling.py
