[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "opensr-local-runner"
version = "0.1.0"
description = "Local GeoTIFF runner for ESA OpenSR SEN2SR and LDSR-S2 workflows"
requires-python = ">=3.12"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
